@@ -1,5 +1,5 @@
 Package: bayesTFR
-Version: 7.2-2.9010
+Version: 7.2-2.9011
 Date: 2023-01-13
 Title: Bayesian Fertility Projection
 Author: Hana Sevcikova (hanas@uw.edu), Leontine Alkema (alkema@nus.edu.sg), Peiran Liu (prliu@uw.edu), Adrian Raftery (raftery@uw.edu), Bailey Fosdick (bfosdick@uw.edu), Patrick Gerland (gerland@un.org)
@@ -10,4 +10,4 @@ Suggests: rworldmap, snowFT, googleVis, rgdal, sp, wpp2017, wpp2015, wpp2012, wp
 Description: Making probabilistic projections of total fertility rate for all countries of the world, using a Bayesian hierarchical model <doi:10.1007/s13524-011-0040-5>. Subnational probabilistic projections are also supported.
 License: GPL-3 | file LICENSE
 URL: https://bayespop.csss.washington.edu
-LazyData: true
+LazyData: false
