@@ -14,7 +14,7 @@ These functions are to be used by expert analysts. They allow to change the esti
 tfr.median.set.all(sim.dir, country, values, years = NULL, 
     burnin = 0, thin = 1)
 
-tfr.median.reset.estimation(sim.dir, countries)
+tfr.median.reset.estimation(sim.dir, countries = NULL)
 
 tfr.shift.estimation.to.wpp(sim.dir, \dots, verbose = TRUE)
 }
@@ -22,7 +22,7 @@ tfr.shift.estimation.to.wpp(sim.dir, \dots, verbose = TRUE)
 \arguments{
   \item{sim.dir}{Directory containing the prediction object.}
   \item{country}{Name or numerical code of a country.}
-  \item{countries}{Vector of country names or codes.}
+  \item{countries}{Vector of country names or codes. If \code{NULL}, the reset is done for all countries.}
   \item{values}{Array of the new median values.}
   \item{years}{Numeric vector giving years which \code{values} correspond to. Ideally it should be of the same length as \code{values}.}
   \item{burnin}{Burnin to use when computing the estimation median.}
@@ -35,7 +35,7 @@ Expert analysts can use these functions to adjust both prediction and estimation
 
 Function \code{tfr.shift.estimation.to.wpp} shifts the median estimation of all countries so that they match the values in the \code{tfr} dataset of the corresponding WPP package. Argument \code{burnin} and \code{thin} should be passed to compute the estimation medians.
 
-Function \code{tfr.median.reset.estimation} resets previous adjustments obtained using \code{tfr.median.set.all}.
+Function \code{tfr.median.reset.estimation} resets previous adjustments obtained using \code{tfr.median.set.all}. By default it resets adjustments for all countries.
 }
 \value{
 Output is a list. If there are time periods matched to estimation, an object of class \code{\link{bayesTFR.mcmc.meta}} is included in the element \code{meta}. If there are time periods matched to years in prediction, then an object of class \code{\link{bayesTFR.prediction}} is included in the element \code{pred}.
